# lsp-bridge-mcp

./: .gitignore  CLAUDE_SETUP.md  CODEX_SETUP.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt  test_manual.py
scalademo/: .gitignore  README.md  build.sbt
scalademo/src/main/scala/: App.scala
scalademo/src/main/scala/models/: User.scala
scalademo/src/main/scala/services/: EmailValidator.scala  UserService.scala
src/lsp_bridge/: __init__.py  __main__.py  lsp_client.py  server.py
